<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/gerenciador_de_amostras"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorFormBackground" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorFormBackground"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/editTextNomeCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_name"
            android:drawablePadding="5dp"
            android:hint="@string/nome_login"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="@string/password_login"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextNomeAmostra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Amostra"
            android:drawableStart="@drawable/ic_amostras"
            android:drawablePadding="5dp"
            android:hint="Nome Amostra"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextExame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Exame"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="Exame"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextNumeroContrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Número Contrato"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="@string/n_contrato"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextConcetracaoComposto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Concentração Composto"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="Concentração Composto"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextTempoExposicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Tempo de Exposição"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="Tempo de Exposição"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextObservacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Observação"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="@string/observa_o"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="7dp"
        android:text="@string/rotulo_botao"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorFormBackground"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/botao_login"
        android:textAllCaps="false"
        android:textColor="@color/colorFormBackground"
        tools:ignore="DuplicateSpeakableTextCheck" />

</RelativeLayout>